Fix weird image stretching

--- a/css/style.css
+++ b/css/style.css
@@ -192,6 +192,7 @@ h1 div:nth-of-type(2) {
     margin-left: 6rem;
     margin-bottom: 3rem;
     max-width: 480px;
+    align-self: flex-start;
 }
 
 #about p {
@@ -332,14 +333,14 @@ h1 div:nth-of-type(2) {
     }
 
     .about-content p {
-        align-self: center;
+        align-self: flex-start;
         line-height: 1.8;
     }
 }
 
 @media screen and (min-width: 1000px) {
     :root {
-        --max-width: 70%
+        --max-width: 75%
     }
     nav ul {
         column-gap: 2.25rem;
@@ -348,7 +349,7 @@ h1 div:nth-of-type(2) {
 
 @media screen and (min-width: 1300px) {
     :root {
-        --max-width: 60%
+        --max-width: 65%
     }
     nav ul {
         column-gap: 2.75rem;
